More CR Fixes